<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginTop="30dp">


  <ImageView
    android:id="@+id/iv_prodPicture"
    android:layout_width="100dp"
    android:layout_height="100dp"

    android:layout_marginStart="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/produce"
    android:contentDescription="@string/prodPicture" />

  <TextView
    android:id="@+id/tv_prodName"
    android:layout_width="150dp"
    android:layout_height="32dp"
    android:layout_marginStart="20dp"
    android:text="@string/product_name"
    android:textColor="@android:color/black"
    android:textSize="18sp"
    app:layout_constraintStart_toEndOf="@+id/iv_prodPicture"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_statusSold"
    android:layout_width="60dp"
    android:layout_height="32dp"
    android:layout_marginStart="20dp"
    android:visibility="invisible"
    android:text="Sold"
    android:textColor="?android:attr/colorEdgeEffect"
    android:textSize="15sp"
    app:layout_constraintStart_toEndOf="@+id/tv_prodName"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_dollarSymbol"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dollar_symbol"
    android:textSize="15sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/tv_prodName"
    app:layout_constraintTop_toBottomOf="@id/tv_prodName" />

  <TextView
    android:id="@+id/tv_prodPrice"
    android:layout_width="200dp"
    android:layout_height="34dp"
    android:text="@string/price"
    android:textColor="@android:color/black"
    android:textSize="15sp"
    app:layout_constraintStart_toEndOf="@+id/tv_dollarSymbol"
    app:layout_constraintTop_toTopOf="@id/tv_dollarSymbol" />


  <TextView
    android:id="@+id/tv_quantity_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/quantity"
    android:textSize="15sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/tv_prodName"
    app:layout_constraintTop_toBottomOf="@+id/tv_dollarSymbol" />

  <TextView
    android:id="@+id/tv_prodQuantity"
    android:layout_width="150dp"
    android:layout_height="32dp"
    android:layout_marginStart="8dp"
    android:text="@string/quantity"
    android:textColor="@android:color/black"
    android:textSize="15sp"
    app:layout_constraintStart_toEndOf="@+id/tv_quantity_title"
    app:layout_constraintTop_toTopOf="@+id/tv_quantity_title" />

  <Button
    android:id="@+id/b_edit"
    android:layout_width="62dp"
    android:layout_height="37dp"
    android:layout_marginStart="30dp"
    android:background="@drawable/custom_button_round"
    android:text="@string/editButton"
    android:textAllCaps="false"
    android:layout_marginTop="10dp"
    android:textColor="#000109"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="@+id/iv_prodPicture"
    app:layout_constraintTop_toBottomOf="@+id/iv_prodPicture" />

  <Button
    android:id="@+id/b_sold"
    android:layout_width="76dp"
    android:layout_height="37dp"
    android:visibility="invisible"
    android:background="@drawable/custom_button_round"
    android:text="@string/sold_outButton"
    android:textAllCaps="false"
    android:textColor="#000109"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="@+id/tv_prodQuantity"
    app:layout_constraintTop_toTopOf="@+id/b_edit" />

  <Button
    android:id="@+id/b_forSaleAgain"
    android:layout_width="76dp"
    android:layout_height="37dp"
    android:visibility="invisible"
    android:background="@drawable/custom_button_round"
    android:text="@string/for_sale_again"
    android:textAllCaps="false"
    android:textColor="#000109"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="@+id/tv_prodQuantity"
    app:layout_constraintTop_toTopOf="@+id/b_edit" />

  <Button
    android:id="@+id/b_delete"
    android:layout_width="62dp"
    android:layout_height="37dp"
    android:layout_marginStart="10dp"
    android:background="@drawable/custom_button_round"
    android:text="@string/deleteButton"
    android:textAllCaps="false"
    android:textColor="#000109"
    android:textSize="15sp"
    app:layout_constraintStart_toEndOf="@+id/b_sold"
    app:layout_constraintTop_toTopOf="@+id/b_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>
