<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/vfmback8"
  android:scaleType="fitXY"
  tools:context=".Registration">

  <TextView
    android:id="@+id/tv_register"
    android:layout_width="336dp"
    android:layout_height="32dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="20dp"
    android:fontFamily="sans-serif-black"
    android:text="@string/registration"
    android:textColor="#006400"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_information"
    android:layout_width="336dp"
    android:layout_height="32dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="10dp"
    android:fontFamily="sans-serif-black"
    android:text="@string/loc_instructions"
    android:textColor="#006400"
    android:textSize="12sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/tv_register"
    app:layout_constraintTop_toBottomOf="@+id/tv_register" />

  <EditText
    android:id="@+id/txt_userFirstName"
    android:layout_width="250dp"
    android:layout_height="32dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/preferred_name"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="@+id/tv_register"
    app:layout_constraintTop_toBottomOf="@+id/tv_register" />

  <EditText
    android:id="@+id/txt_email"
    android:layout_width="250dp"
    android:layout_height="32dp"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/email_address"
    android:importantForAutofill="no"
    android:inputType="textEmailAddress"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_userFirstName"/>

  <EditText
    android:id="@+id/txt_phoneNumber"
    android:layout_width="130dp"
    android:layout_height="32dp"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/phone_number"
    android:importantForAutofill="no"
    android:inputType="phone"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_email" />

  <EditText
    android:id="@+id/txt_searchLimit"
    android:layout_width="100dp"
    android:layout_height="32dp"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/preferred_search_zone_in_miles"
    android:importantForAutofill="no"
    android:inputType="number"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toEndOf="@+id/txt_phoneNumber"
    app:layout_constraintTop_toBottomOf="@+id/txt_email" />

  <EditText
    android:id="@+id/txt_password"
    android:layout_width="250dp"
    android:layout_height="32dp"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/password"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_phoneNumber" />

  <EditText
    android:id="@+id/txt_confirmPassword"
    android:layout_width="250dp"
    android:layout_height="32dp"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_button_round"
    android:hint="@string/confirm_password"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:textAllCaps="false"
    android:textColor="#003700"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_password" />

  <Button
    android:id="@+id/b_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="140dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/custom_button_round"
    android:gravity="center"
    android:text="@string/add_location"
    android:textAllCaps="false"
    android:textColor="#000109"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_confirmPassword" />

  <TextView
    android:id="@+id/tv_userButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="104dp"
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:text="@string/already_user"
    android:textColor="#006400"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/b_location" />


  <Button
    android:id="@+id/b_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="152dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/custom_button_round"
    android:gravity="center"
    android:text="@string/register"
    android:textAllCaps="false"
    android:textColor="#000109"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_userButton" />

  <ProgressBar
    android:id="@+id/pb_progress"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="168dp"
    android:layout_marginTop="5dp"
    android:foregroundGravity="center_horizontal"
    android:visibility="invisible"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/b_register" />


</androidx.constraintlayout.widget.ConstraintLayout>
