<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/vfmback8"
  tools:context=".ProductDetailsSeller">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/tv_title_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/product_details_buyer"
        android:textColor="#006400"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:id="@+id/iv_product_image_PDB"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_description_buyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_PDB"
        app:srcCompat="@drawable/fruits" />

      <TextView
        android:id="@+id/tv_product_name_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/product_name"
        android:textColor="#006400"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_image_PDB" />

      <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_title_PLVH"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_product_name_PDB"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name_PDB" />

      <TextView
        android:id="@+id/tv_category_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_name_PLVH"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_category_title"
        app:layout_constraintTop_toTopOf="@+id/tv_category_title" />

      <TextView
        android:id="@+id/tv_product_description_PDB"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="100"
        android:text="@string/product_description_PLVH"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_title" />

      <EditText
        android:id="@+id/et_description"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button_round"
        android:visibility="invisible"
        android:hint="@string/new_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapSentences|textMultiLine"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#003700"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toBottomOf="@id/tv_product_description_PDB" />

      <TextView
        android:id="@+id/tv_dollar_symbol_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dollar_symbol"
        android:textColor="#006400"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toBottomOf="@+id/et_description" />

      <TextView
        android:id="@+id/tv_product_price_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/product_price_PLVH"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dollar_symbol_PDB"
        app:layout_constraintStart_toEndOf="@+id/tv_dollar_symbol_PDB" />

      <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_round"
        android:visibility="invisible"
        android:hint="What is the new price?"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:textAllCaps="false"
        android:textColor="#003700"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toEndOf="@+id/tv_product_price_PDB" />

      <TextView
        android:id="@+id/tv_quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/available_quantity_PLVH"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_PDB"
        app:layout_constraintTop_toBottomOf="@+id/tv_dollar_symbol_PDB" />

      <TextView
        android:id="@+id/tv_quantity_PDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/quantity"
        android:textColor="#006400"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quantity_title"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity_title" />

      <EditText
        android:id="@+id/et_quantity"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button_round"
        android:visibility="invisible"
        android:hint="@string/new_quantity"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapSentences"
        android:textAllCaps="false"
        android:textColor="#003700"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity_PDB" />

      <Button
        android:id="@+id/b_soldOut"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/custom_button_round"
        android:text="@string/sold_outButton"
        android:visibility="visible"
        android:textAllCaps="false"
        android:textColor="#000109"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toTopOf="@+id/tv_title_PDB" />

      <Button
        android:id="@+id/b_forSale"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/custom_button_round"
        android:text="@string/for_sale"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="#000109"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title_PDB"
        app:layout_constraintTop_toTopOf="@+id/tv_title_PDB" />


      <Button
        android:id="@+id/b_deleted"
        android:layout_width="62dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custom_button_round"
        android:text="@string/deleteButton"
        android:textAllCaps="false"
        android:textColor="#000109"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/b_soldOut"
        app:layout_constraintTop_toTopOf="@+id/b_soldOut" />

      <Button
        android:id="@+id/b_editProd"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible"
        android:background="@drawable/custom_button_round"
        android:text="Edit Product"
        android:textAllCaps="false"
        android:textColor="#000109"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/tv_product_name_PDB"
        app:layout_constraintEnd_toEndOf="parent" />

      <Button
        android:id="@+id/b_saveChanges"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button_round"
        android:visibility="invisible"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="#000109"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantity_PDB" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
